# CupcakeComics

./: .gitignore  README.md  build.gradle  settings.gradle
.github/workflows/: release.yml
.wayfinder/: README.md  SPEC-v1.md
.wayfinder/assets/: 006-product-flow-prototype.md  build-handoff-log.md
.wayfinder/maps/: cupcake-comics-wayfinding.md
.wayfinder/tickets/: 001-choose-the-fork-and-modernization-boundary.md  002-define-the-kapowarr-compatibility-contract.md  003-choose-the-smb-streaming-and-cache-model.md  004-define-library-identity-pull-list-scanning-and-progress-semantics.md  005-adapt-chika-panel-guidance-into-bubble2.md  006-approve-the-product-flow.md  007-define-device-test-and-release-acceptance.md
app/: build.gradle
app/schemas/com.cupcakecomics.data.CupcakeDatabase/: 7.json
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  color_correct.cpp  cupcake_image.cpp  lanczos.cpp
app/src/main/res/drawable/: feedback_fab_bg.xml  ic_check_circle_24.xml  ic_expand_less_24.xml  ic_expand_more_24.xml  ic_fit_expand_24.xml  ic_layout_continuous_24.xml  ic_layout_double_24.xml  ic_layout_single_24.xml  ic_menu_24.xml  ic_share_24.xml  ic_swap_horiz_24.xml  ic_tonality_24.xml  (+5 more)
docs/: DEVICE_SETUP.md
feedback/: README.md  pull-from-phone.bat
feedback/CupcakeFeedback/: LATEST (1).md  LATEST (10).md  LATEST (11).md  LATEST (12).md  LATEST (13).md  LATEST (2).md  LATEST (3).md  LATEST (4).md  LATEST (5).md  LATEST (6).md  LATEST (9).md  LATEST.md  feedback_20260718_110917.md  feedback_20260718_123852.md  feedback_20260719_211301.md
(+149 files in other folders)
